<resources>
    <string name="app_name">Assignment 1</string>

    <!-- radio button labels / output strings -->
    <string name="game_rock">Rock</string>
    <string name="game_paper">Paper</string>
    <string name="game_scissor">Scissor</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <string name="choose_hand">Choose your hand</string>
    <string name="user_choice">Users Choice</string>
    <string name="cpu_choice">Computers Choice</string>
    <string name="winner">Winner is</string>
    <string name="undefined">Undefined</string>

    <!-- the button labels -->
    <string name="play">Play</string>
    <string name="playagain">Play Again</string>

    <!-- the activity labels -->
    <string name="input_activity">Input Activity</string>
    <string name="output_activity">Output Activity</string>

    <!-- the floating label -->
    <string name="student">Ali Muhammad #991457284</string>

</resources>