<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/InputTheme"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/input_activity_label"
        style="@style/activity_label"
        android:text="@string/input_activity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:text="@string/choose_hand"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="30sp" />


    <RadioGroup
        android:id="@+id/message_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap0"
        android:checkedButton="@+id/paper_button">

        <RadioButton
            android:id="@+id/rock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_rock"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/paper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_paper"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/scissor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_scissor"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/send_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="147dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/gap2"
        android:background="#0688EF"
        android:text="@string/play"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/sheridan2"
        style="@style/sheridan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F8F8F8"
        android:text="@string/student"
        android:textColor="#04ACFA"
        android:textColorHighlight="#FFFFFF" />
</LinearLayout>