<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/OutputTheme"
    tools:context=".OutputActivity">

    <TextView
        android:id="@+id/output_activity_label"
        style="@style/activity_label"
        android:background="#FFFFFF"
        android:text="@string/output_activity" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/user_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap0"
        android:background="#FFFFFF"
        android:text="@string/undefined"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/message_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/cpu_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/message_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap0"
        android:background="#FFFFFF"
        android:text="@string/undefined"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/message_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap0"
        android:background="#FFFFFF"
        android:text="@string/undefined"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

    <Button
        android:id="@+id/close_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="62dp"
        android:layout_marginTop="@dimen/gap2"
        android:background="#0688EF"
        android:text="@string/playagain"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#9FD3EF" />

    <TextView
        android:id="@+id/sheridan"
        style="@style/sheridan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F8F8F8"
        android:text="@string/student"
        android:textColor="#04ACFA"
        android:textColorHighlight="#FFFFFF" />
</LinearLayout>